fable/test/syntax_error/x_assign_1dotd.f
      program prog
      x = 1.d
      end
